Removed some inconsistenies, bug fixes and slight changes

--- a/circular_queue/Makefile
+++ b/circular_queue/Makefile
@@ -2,7 +2,7 @@ TARGET = example
 CC=gcc
 CFLAGS =-I. -Wall -Wextra
 HEADERS = queue.h
-OBJ = example.o circular_queue.o
+OBJ = circular_queue_ex.o circular_queue.o
 
 %.o : %.c $(HEADERS)
 	$(CC) -c -o $@ $< $(CFLAGS)
